# bazel-rules_rust-openssl-example

./: BUILD.bazel  Cargo.Bazel.lock.json  Cargo.toml  MODULE.bazel  WORKSPACE.bazel
src/: main.rs
